Oauth using EGA AAI and custom Role Based authority

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -69,5 +69,7 @@ accessioning.monotonic.sample.blockSize=1000
 accessioning.monotonic.sample.blockStartValue=0
 accessioning.monotonic.sample.nextBlockInterval=0
 
+spring.datasource.data=classpath:data.sql
+
 # disable eureka for test
 eureka.client.enabled=false
