--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>uk.ac.ebi.ega</groupId>
     <artifactId>accessioning-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>${packaging.type}</packaging>
+    <packaging>war</packaging>
 
     <name>accessioning-service</name>
     <url>http://github.com/EBIvariation/ega-accession</url>
@@ -35,6 +35,10 @@
             <version>0.6-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
