--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,7 @@ spring.datasource.password=@egaAccession-db.password@
 spring.jpa.hibernate.ddl-auto=@ddl-behaviour@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.generate-ddl=true
+spring.datasource.data=classpath:data.sql
 #####################################################################################
 # ACTUATOR
 #####################################################################################
@@ -106,3 +107,12 @@ eureka.vipAddress=
 eureka.serviceUrls=
 eureka.client.serviceUrl.defaultZone=
 eureka.instance.preferIpAddress=true
+
+#####################################################################################
+# SECURITY
+#####################################################################################
+
+security.enabled=true
+security.oauth2.client.client-id=@ega-aai-client-id@
+security.oauth2.client.client-secret=@ega-aai-client-secret@
+security.oauth2.resource.token-info-uri=@ega-aai-token-introspect-url@
