custom authorities extractor using UserInfo Url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,6 +113,5 @@ eureka.instance.preferIpAddress=true
 #####################################################################################
 
 security.enabled=true
-security.oauth2.client.client-id=@ega-aai-client-id@
-security.oauth2.client.client-secret=@ega-aai-client-secret@
-security.oauth2.resource.token-info-uri=@ega-aai-token-introspect-url@
+security.oauth2.resource.user-info-uri=@ega-aai-user-info-url@
+
