--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>uk.ac.ebi.ega</groupId>
     <artifactId>accessioning-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>${packaging.type}</packaging>
 
     <name>accessioning-service</name>
     <url>http://github.com/EBIvariation/ega-accession</url>
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4-1206-jdbc42</version>
+            <version>42.2.5</version>
         </dependency>
         <!-- documentation -->
         <dependency>
