Changed commons version to 0.6.3

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -31,43 +31,43 @@ accessioning.instanceId=instance-01;
 
 accessioning.monotonic.file.blockSize=1000
 accessioning.monotonic.file.blockStartValue=0
-accessioning.monotonic.file.nextBlockInterval=0
+accessioning.monotonic.file.interleaveInterval=0
 
 accessioning.monotonic.study.blockSize=1000
 accessioning.monotonic.study.blockStartValue=0
-accessioning.monotonic.study.nextBlockInterval=0
+accessioning.monotonic.study.interleaveInterval=0
 
 accessioning.monotonic.run.blockSize=1000
 accessioning.monotonic.run.blockStartValue=0
-accessioning.monotonic.run.nextBlockInterval=0
+accessioning.monotonic.run.interleaveInterval=0
 
 accessioning.monotonic.analysis.blockSize=1000
 accessioning.monotonic.analysis.blockStartValue=0
-accessioning.monotonic.analysis.nextBlockInterval=0
+accessioning.monotonic.analysis.interleaveInterval=0
 
 accessioning.monotonic.experiment.blockSize=1000
 accessioning.monotonic.experiment.blockStartValue=0
-accessioning.monotonic.experiment.nextBlockInterval=0
+accessioning.monotonic.experiment.interleaveInterval=0
 
 accessioning.monotonic.dac.blockSize=1000
 accessioning.monotonic.dac.blockStartValue=0
-accessioning.monotonic.dac.nextBlockInterval=0
+accessioning.monotonic.dac.interleaveInterval=0
 
 accessioning.monotonic.policy.blockSize=1000
 accessioning.monotonic.policy.blockStartValue=0
-accessioning.monotonic.policy.nextBlockInterval=0
+accessioning.monotonic.policy.interleaveInterval=0
 
 accessioning.monotonic.dataset.blockSize=1000
 accessioning.monotonic.dataset.blockStartValue=0
-accessioning.monotonic.dataset.nextBlockInterval=0
+accessioning.monotonic.dataset.interleaveInterval=0
 
 accessioning.monotonic.array.blockSize=1000
 accessioning.monotonic.array.blockStartValue=0
-accessioning.monotonic.array.nextBlockInterval=0
+accessioning.monotonic.array.interleaveInterval=0
 
 accessioning.monotonic.sample.blockSize=1000
 accessioning.monotonic.sample.blockStartValue=0
-accessioning.monotonic.sample.nextBlockInterval=0
+accessioning.monotonic.sample.interleaveInterval=0
 
 spring.datasource.data=classpath:data.sql
 
