--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
         <dependency>
             <groupId>uk.ac.ebi.ampt2d</groupId>
             <artifactId>accession-commons-jpa</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>0.6.3</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.ampt2d</groupId>
             <artifactId>accession-commons-monotonic-generator-jpa</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>0.6.3</version>
         </dependency>
 
         <dependency>
